--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cool Website</title>
+    <title>Ryxohub</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Cool Website!</h1>
-        <button onclick="openInfo('info1')">Ryxohub</button>
+        <h1>Ryxohub!</h1>
+        <button onclick="openInfo('info1')">Info 1</button>
+        <button onclick="openInfo('info2')">Info 2</button>
+        <button onclick="openInfo('info3')">Info 3</button>
     </div>
 
     <div id="infoModal" class="modal">
