--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <div class="container">
         <h1>Ryxohub!</h1>
-        <button onclick="openInfo('Ryxohub')">https://raw.githubusercontent.com/EmanuelPlays/ryxohub/refs/heads/main/ryxohub.lua</button>
-        <button onclick="openInfo('info2')">Info 2</button>
-        <button onclick="openInfo('info3')">Info 3</button>
+        <button onclick="openInfo('https://raw.githubusercontent.com/EmanuelPlays/ryxohub/refs/heads/main/ryxohub.lua')">Ryxohub</button>
     </div>
 
     <div id="infoModal" class="modal">
