--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ryxohub</title>
+    <title>Roblox cheat scripts</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Ryxohub!</h1>
+        <h1>All of my scripts</h1>
         <button onclick="openInfo('https://raw.githubusercontent.com/EmanuelPlays/ryxohub/refs/heads/main/ryxohub.lua')">Ryxohub</button>
     </div>
 
