--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>All of my scripts</h1>
-        <button onclick="openInfo('https://raw.githubusercontent.com/EmanuelPlays/ryxohub/refs/heads/main/ryxohub.lua')">Ryxohub</button>
+        <button onclick="openInfo('Ryxohub link: https://raw.githubusercontent.com/EmanuelPlays/ryxohub/refs/heads/main/ryxohub.lua')">Ryxohub</button>
     </div>
 
     <div id="infoModal" class="modal">
