--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roblox cheat scripts</title>
+    <title>Roblox Cheat Scripts</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="sparkle-container"></div>
     <div class="container">
-        <h1>All of my scripts</h1>
+        <h1>All of My Scripts</h1>
         <button onclick="openInfo('Ryxohub link: raw.githubusercontent.com/EmanuelPlays/ryxohub/refs/heads/main/ryxohub.lua')">Ryxohub</button>
     </div>
 
     <div id="infoModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeInfo()">&times;</span>
-            <h2 id="infoTitle"></h2>
+            <h2 id="infoTitle">Script Information</h2>
             <p id="infoText"></p>
         </div>
     </div>
