--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="sparkle-container"></div>
     <div class="container">
         <h1>All of My Scripts</h1>
-        <button onclick="openInfo('Ryxohub link: raw.githubusercontent.com/EmanuelPlays/ryxohub/refs/heads/main/ryxohub.lua')">Ryxohub</button>
+        <button onclick="openInfo('To use put this script in injector: loadstring(game:HttpGet('https://raw.githubusercontent.com/EmanuelPlays/ryxohub/refs/heads/main/ryxohub.lua'))()')">Ryxohub</button>
     </div>
 
     <div id="infoModal" class="modal">
